--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -147,6 +147,11 @@ a:active, a:visited {
     text-transform: uppercase;
 }
 /* ---------------------------------- modal --------------------------------- */
+.cart-body {
+    height: 100%;
+    background-color: var(--clr-light-grey);
+    border-bottom: 3px solid var(--clr-primary);
+}
 .modal-img {
     object-fit: cover;
 }
@@ -166,10 +171,7 @@ a:active, a:visited {
 .card-buttons {
     height: auto;
 }
-.cart-body {
-    height: 100%;
-    background-color: var(--clr-light-grey);
-}
+
 .total-cart {
     font-size: 1.25rem;
     padding: 0 2em;
@@ -178,6 +180,18 @@ a:active, a:visited {
     color: var(--clr-details);
     font-size: 1.25rem;
     font-weight: 700;
+}
+/* --------------------------------- footer --------------------------------- */
+footer {
+    height: auto;
+    background-color: var(--clr-dark);
+}
+footer p {
+    color: var(--clr-primary);
+    font-size: 1.25rem;
+    font-weight: 600;
+    text-align: center;
+    padding: 1rem;
 }
 /* ------------------------------ media querys ------------------------------ */
 @media screen and (max-width: 576px) {
